--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@uploadthing/react": "^6.7.2",
+    "@vercel/analytics": "^1.3.1",
     "ai": "^3.2.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
